--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+#editor
+.vscode
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -102,3 +104,6 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+
+#configs
+wakeup.cfg
