--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,30 @@
-astroid==2.0.4
-certifi==2018.8.13
+astroid==2.3.2
+certifi==2019.9.11
 chardet==3.0.4
-click==6.7
-colorama==0.3.9
-coverage==4.5.1
+Click==7.0
+colorama==0.4.1
+colorclass==2.2.0
+colorzero==1.1
+coverage==4.5.4
+docopt==0.6.2
 dparse==0.4.1
-gpiozero==1.4.1
-idna==2.7
-isort==4.3.4
-lazy-object-proxy==1.3.1
+gpiozero==1.5.1
+idna==2.8
+isort==4.3.21
+lazy-object-proxy==1.4.3
 mccabe==0.6.1
-mock==2.0.0
+mock==3.0.5
 nose==1.3.7
-packaging==17.1
-pbr==4.2.0
-pylint==2.1.1
-pyparsing==2.2.0
-PyYAML==3.13
-requests==2.19.1
-safety==1.8.4
-six==1.11.0
-urllib3==1.23
-wrapt==1.10.11
+packaging==19.2
+pbr==5.4.3
+pip-upgrader==1.4.15
+pylint==2.4.3
+pyparsing==2.4.2
+PyYAML==5.1.2
+requests==2.22.0
+safety==1.8.5
+six==1.12.0
+terminaltables==3.1.0
+typed-ast==1.4.0
+urllib3==1.25.6
+wrapt==1.11.2
